--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
   <title>Booksbridge</title>
 </html>
 <body>
-  <div id="app-root"></div>
+  <div id="app-root" style="text-align: center"></div>
 </body>
